# AcuGuard

./: README.md  docker-compose.yml  package.json  vercel.json
apps/backend/: .dockerignore  Cargo.toml  Dockerfile  README.md
apps/backend/scripts/: smoke_test.sh
apps/backend/sql/: schema.sql
apps/backend/src/: main.rs
apps/web/: Dockerfile  drizzle.config.ts  package-lock.json  package.json  vitest.config.ts
apps/web/src/__tests__/: ai-integration.test.ts  ai-stream.test.ts  ai-utils.test.ts  stream-filter.test.ts  useTouchDragPluginGroup.test.tsx
apps/web/src/app/: globals.css  icon.tsx  layout.tsx  page.tsx
apps/web/src/app/(dashboard)/ai/: page.tsx
apps/web/src/app/(dashboard)/board/: page.tsx
apps/web/src/app/(dashboard)/issues/[issueId]/: page.tsx
apps/web/src/app/(dashboard)/me/: page.tsx
apps/web/src/app/(dashboard)/projects/: page.tsx
apps/web/src/app/api/ai/chat/: route.ts
apps/web/src/app/api/ai/comment/: route.ts
apps/web/src/app/api/comments/: route.ts
apps/web/src/app/api/issues/: route.ts
apps/web/src/app/api/projects/: route.ts
apps/web/src/components/layout/: AppShell.tsx
apps/web/src/components/plugins/: PluginGroups.tsx
apps/web/src/components/plugins/board/: useTouchDragPluginGroup.ts
apps/web/src/db/: client.ts  schema.ts
apps/web/src/lib/: ai.ts  auth.ts  mock-data.ts  mock-store.ts  stream-filter.ts  types.ts  utils.ts
docs/: surpass-jira-execution-plan.md
k8s/: api.yaml  config.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  web.yaml
scripts/: jira-gap-task-group.sh
(+9 files in other folders)
