[package]
name = "acuguard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }

num_cpus = "1.17"
